# Patterns

./: CMakeLists.txt  README.md
Test/: BuilderTest.cpp  ObserverTest.cpp  SingletonTest.cpp  main.cpp
include/: Builder.h  Singleton.h  Subject.h
